kubernetes/services/access-control-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: access-control-service
spec:
    selector:
        matchLabels:
            app: access-control-service
    replicas: 1
    template:
        metadata:
            labels:
                app: access-control-service
        spec:
            containers:
                - name: access-control-service
                  image: $DOCKER_REGISTRY/segmentme-access-control-service
                  imagePullPolicy: Always
                  resources:
                      limits:
                          memory: 200Mi
                      requests:
                          memory: 150Mi
                  ports:
                      - containerPort: 80
                  livenessProbe:
                      httpGet:
                          path: /actuator/health
                          port: 80
                      initialDelaySeconds: 200
                      timeoutSeconds: 5
                      periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
    name: access-control-service
spec:
    selector:
        app: access-control-service
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
