kubernetes/services/analysis-api-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: analysis-api-service
spec:
    selector:
        matchLabels:
            app: analysis-api-service
    replicas: 1
    template:
        metadata:
            labels:
                app: analysis-api-service
        spec:
            containers:
                - name: analysis-api-service
                  image: $DOCKER_REGISTRY/segmentme-analysis-api-service
                  imagePullPolicy: Always
                  resources:
                      limits:
                          memory: 512Mi
                      requests:
                          memory: 512Mi
                  ports:
                      - containerPort: 80
                  livenessProbe:
                      httpGet:
                          path: /actuator/health
                          port: 80
                      initialDelaySeconds: 60
                      timeoutSeconds: 5
                      periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
    name: analysis-api-service
spec:
    selector:
        app: analysis-api-service
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
