kubernetes/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: local-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /analysis-api-svc(/|$)(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: analysis-api-service
                            port:
                                number: 80
                  -   path: /analysis-svc(/|$)(.*)
                      pathType: Prefix
                      backend:
                          service:
                              name: analysis-service
                              port:
                                  number: 80
                  -   path: /mngmnt-svc(/|$)(.*)
                      pathType: Prefix
                      backend:
                          service:
                              name: management-service
                              port:
                                  number: 80
                  -   path: /msrmnt-svc(/|$)(.*)
                      pathType: Prefix
                      backend:
                          service:
                              name: measurement-service
                              port:
                                  number: 80
