kubernetes/services/web-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web-app-ingress
    annotations:
#        alb.ingress.kubernetes.io/scheme: internet-facing
#        kubernetes.io/ingress.class: alb
#        alb.ingress.kubernetes.io/scheme: internet-facing
#        alb.ingress.kubernetes.io/target-type: instance
#        alb.ingress.kubernetes.io/group.name: sme-eks-alb
#        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'80
spec:
    rules:
        -   http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: web-app
                                port:
                                    number: 80
